crates/carta/tests/snapshots/golden_e2e__ipynb__native__escaped-line-break-literal.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "noesc" , [ "cell" , "markdown" ] , [] )
    [ Para
        [ Str "line"
        , Space
        , Str "one\\"
        , SoftBreak
        , Str "line"
        , Space
        , Str "two"
        ]
    ]
]
