crates/carta/tests/snapshots/golden_e2e__ipynb__native__metadata.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "body" , [ "cell" , "markdown" ] , [] )
    [ Para [ Str "Document" , Space , Str "body." ] ]
]
