crates/carta/tests/snapshots/golden_e2e__ipynb__native__raw-asciidoc.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "embed"
    , [ "cell" , "raw" ]
    , [ ( "raw_mimetype" , "text/asciidoc" ) ]
    )
    [ RawBlock
        (Format "asciidoc") "[NOTE]\n====\nadmonition body\n===="
    ]
]
