crates/carta/tests/snapshots/golden_e2e__ipynb__native__raw.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
[ Div
    ( "embed"
    , [ "cell" , "raw" ]
    , [ ( "format" , "text/html" ) ]
    )
    [ RawBlock
        (Format "html")
        "<aside class=\"note\">A raw HTML block passed through verbatim.</aside>"
    ]
]
